--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "G. Owen",
   "license": "ISC",
   "dependencies": {
-    "@11ty/eleventy": "^2.0.1",
     "clean-css": "^5.3.3"
+  },
+  "devDependencies": {
+    "@11ty/eleventy-img": "^2.0.1"
   }
 }
